# cmus-client-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
cli/: CMakeLists.txt  print_list.cc  status.cc  utils.h
lib/: CMakeLists.txt  cmus_client.cc  cmus_client.h  connection_interface.h  exceptions.cc  exceptions.h  ip_connection_interface.cc  ip_connection_interface.h  metadata.cc  metadata.h  status.cc  status.h  string_buffer.cc  string_buffer.h  tags.cc  tags.h  unix_connection_interface.cc  unix_connection_interface.h
test/lib/: CMakeLists.txt  cmus_client_unittests.cc  main.cc
